--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
 		"deploy": "wrangler deploy",
 		"test": "node ./src/index.test.js"
 	},
+	"devDependencies": {
+		"prettier": "^3.3.3",
+		"wrangler": "3.80.1"
+	},
+	"dependencies": {
+		"cheerio": "^1.0.0",
+		"htmlparser2": "^9.1.0"
+	},
 	"prettier": {
 		"tabWidth": 4,
 		"useTabs": true,
 		"semi": false,
 		"singleQuote": true,
 		"printWidth": 100
-	},
-	"devDependencies": {
-		"wrangler": "3.80.1"
-	},
-	"dependencies": {
-		"cheerio": "^1.0.0",
-		"htmlparser2": "^9.1.0"
 	}
 }
