--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
 	"name": "racle-meteo",
 	"type": "module",
-	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "wrangler dev",
-		"deploy": "wrangler deploy",
-		"test": "node ./src/index.test.js"
-	},
-	"devDependencies": {
-		"prettier": "^3.3.3",
-		"wrangler": "3.80.4"
+		"dev": "npx wrangler dev",
+		"deploy": "npx wrangler deploy"
 	},
 	"dependencies": {
 		"cheerio": "^1.0.0"
@@ -20,6 +14,6 @@
 		"useTabs": true,
 		"semi": false,
 		"singleQuote": true,
-		"printWidth": 100
+		"printWidth": 144
 	}
 }
