--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,6 @@ jobs:
               with:
                   deno-version: v2.x
 
-            - run: deno test --allow-net
+            - run: |
+                deno install
+                deno test --allow-net
