--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,7 @@
 {
     "tasks": {
+        "dev": "npx wrangler dev",
+        "deploy": "npx wrangler deploy",
         "test": "deno test --allow-net"
     },
     "fmt": {
