--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://raw.githubusercontent.com/denoland/deno/refs/heads/main/cli/schemas/config-file.v1.json",
     "tasks": {
         "dev": "npx wrangler dev",
         "deploy": "npx wrangler deploy",
