--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,4 +21,5 @@ jobs:
 
             - run: |
                   deno install
+                  deno check
                   deno test --allow-net
